[package]
name = "Rust-Programming-launguage"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "chap1"
path = "src/chapter1/main.rs"

[[bin]]
name = "chap3"
path = "src/chapter3/main.rs"

[[bin]]
name = "chap4"
path = "src/chapter4/main.rs"

[[bin]]
name = "chap5"
path = "src/chapter5/main.rs"

[[bin]]
name = "chap6"
path = "src/chapter6/main.rs"

[dependencies]
