[package]
name = "rust-programming-language"
version = "0.1.0"
edition = "2024"

[dependencies]

[[bin]]
name = "chap1"
path = "src/chapter1/main.rs"

[[bin]]
name = "chap3"
path = "src/chapter3/main.rs"

[[bin]]
name = "chap4"
path = "src/chapter4/main.rs"

[[bin]]
name = "chap5"
path = "src/chapter5/main.rs"

[[bin]]
name = "chap6"
path = "src/chapter6/main.rs"

[[bin]]
name = "chap7"
path = "src/chapter7/main.rs"

[[bin]]
name = "chap8"
path = "src/chapter8/main.rs"

[[bin]]
name = "chap9"
path = "src/chapter9/main.rs"

[[bin]]
name = "chap10"
path = "src/chapter10/main.rs"

[[bin]]
name = "chap12"
path = "src/chapter12/main.rs"

[[bin]]
name = "chap15"
path = "src/chapter15/main.rs"

[[bin]]
name = "chap16"
path = "src/chapter16/main.rs"

[[bin]]
name = "chap20"
path = "src/chapter20/bin/main.rs"
